# Jules-template-syn-ima

./: CMakeLists.txt  LICENSE  README.md
TP3_exo1_triangle_blanc/: main.cpp
TP3_exo3_structure_vertex/: main.cpp
TP3_exo4_quad/: main.cpp
TP3_exo5_disque/: main.cpp
TP3_exo6_IBO_quad/: main.cpp
TP4_exo1_triangle_couleurs/: main.cpp
TP4_exo1_triangle_couleurs/shaders/: grey2d.fs.glsl  grey2d.vs.glsl
TP4_exo2_textures_procedurales/shaders/: grey2d.vs.glsl
TP4_exo3_Mandelbrot/: main.cpp
TP4_exo3_Mandelbrot/shaders/: mandelbrot.fs.glsl  mandelbrot.vs.glsl
TP4_exo4_triangle/: main.cpp
TP4_exo4_triangle/shaders/: text2D.fs.glsl  text2D.vs.glsl
TP6_exo1_sphere/: main.cpp
TP6_exo1_sphere/shaders/: normals.fs.glsl
TP6_exo2_earth_moons/: main.cpp
TP6_exo2_earth_moons/shaders/: tex3D.fs.glsl
TP6_exo3_multi-texturing/: main.cpp
TP6_exo3_multi-texturing/shaders/: multiTex3D.fs.glsl
TP6_exo4_shaders/: main.cpp
TP7_exo1_trackball_camera/: TrackballCamera.cpp  TrackballCamera.hpp  main.cpp
TP7_exo1_trackball_camera/shaders/: multiTex3D.fs.glsl
TP7_exo2_freefly_camera/: FreeflyCamera.cpp  FreeflyCamera.hpp  main.cpp
TP8_exo1_lumiere_directionnelle/: main.cpp
TP8_exo1_lumiere_directionnelle/shaders/: 3D_light.vs.glsl  directionalLight.fs.glsl
TP8_exo2_lumiere_ponctuelle/: main.cpp
TP8_exo2_lumiere_ponctuelle/shaders/: pointLight.fs.glsl
